Fix alignment of portait-orientation images
This fixes an issue where portrait-oriented images were aligning to the
left. This left a wide, empty white space to the right which looked
goofy. Now they align nicely in the center.

--- a/style.css
+++ b/style.css
@@ -751,7 +751,8 @@ article.format-link .entry-date {
 .attachment-media-feature,
 .attachment-featured-single,
 .attachment-media-feature-single {
-	margin-bottom: 1em;
+	display: block;
+	margin: 0 auto 1em auto;
 }
 
 /* Make sure embeds and iframes fit their containers */
